--- a/Web/CpaWebApp/CpaWebApp.csproj
+++ b/Web/CpaWebApp/CpaWebApp.csproj
@@ -6,9 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="jQuery" Version="3.3.1" />
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.2.7" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="WireMock.Net" Version="1.0.32" />
   </ItemGroup>
 
   <ItemGroup>
