complete fits test

--- a/Web/CpaWebApp/CpaWebApp.csproj
+++ b/Web/CpaWebApp/CpaWebApp.csproj
@@ -20,4 +20,6 @@
     <ProjectReference Include="..\..\Api\ShikiApiLib\ShikiApiLib.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1development_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
